--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       
       <main>   
      <section class="section-options">
-        <h3>Choose Your favourite News</h3>
+        <h3>Choose Your Favourite News</h3>
         <div class="selection-div">
      <div id="category">
           <select class="custom-select"> 
-            <option selected="true" disabled="disabled">Choose category</option>
+            <option selected="true" disabled="disabled">Choose Category</option>
             <option value="business">business</option>
             <option value="entertainment">entertaiment</option>
             <option value="health">health</option>
