--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </div>
       </header>      
       <main>   
-     <section class="section-options">
+     <section class="section-options" id="options">
         <h3>Choose Your Favourite News</h3>
         <div class="selection-div">
      <div id="category">
@@ -66,8 +66,11 @@
         </div>
       </div>
     </section>
-        <input type="submit" value="View Results">View Results</input>
+        <input type="submit" value="View Results"></input>
+        <a href="#" id="scroll" style="display: none;"><span></span></a>
         <div id="results">
+
+            
         </div>
      </main>
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
