--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <section class="section-options" id="options">
         <h3>Choose Your Favourite News</h3>
         <div class="selection-div">
-     <div id="category">
+     <div id="category" class="buttons">
           <select class="custom-select"> 
             <option selected="true" disabled="disabled">Choose Category</option>
             <option value="business">business</option>
@@ -46,12 +46,12 @@
             <option value="technology">technology</option>
           </select>
       </div>
-      <div class="icon">
+      <div class="icon" class="buttons">
           <i class="fas fa-angle-double-left"></i>
           <i class="fas fa-angle-double-right"></i>
           
       </div>
-        <div id="country">
+        <div id="country" class="buttons">
           <select class="custom-select">
             <option selected="true" disabled="disabled">Choose a country</option>
             <option value="ca">canada</option>
@@ -66,7 +66,7 @@
         </div>
       </div>
     </section>
-        <input type="submit" value="View Results"></input>
+        <input class="results-button btn-grad" type="submit" value="View Results"></input>
         <a href="#" id="scroll" style="display: none;"><span></span></a>
         <div id="results">
 
