--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://kit.fontawesome.com/b8ce70bdd1.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpeg"> 
-        <title>Memory Hack</title>
+        <title>Top News Stories Around the World</title>
     </head>
     <body>
        <header class="header">
@@ -20,7 +20,7 @@
                         Your browser is not supported!
                     </video>
             </div> 
-            <h1 class="header__heading"> Get the latest news in <span class="typed"></span></h1>
+            <h1 class="header__heading"> Get the latest in <span class="typed"></span></h1>
             <a  href="#" class="btn btn--white btn--animated">category</a>
              <div class="ticker-wrap">
                 <!-- <div class="ticker">
@@ -33,33 +33,32 @@
       </header>      
       <main>   
      <section class="section-options" id="options">
-        <h3>Choose Your Favourite News</h3>
+        <h3>What News Interests You?</h3>
         <div class="selection-div">
      <div id="category" class="buttons">
           <select class="custom-select"> 
-            <option selected="true" disabled="disabled">Choose Category</option>
-            <option value="business">business</option>
-            <option value="entertainment">entertaiment</option>
-            <option value="health">health</option>
-            <option value="science">science</option>
-            <option value="sports">sports</option>
-            <option value="technology">technology</option>
+            <option selected="true" disabled="disabled">Category</option>
+            <option value="business">Business</option>
+            <option value="entertainment">Entertaiment</option>
+            <option value="health">Health</option>
+            <option value="science">Science</option>
+            <option value="sports">Sports</option>
+            <option value="technology">Technology</option>
           </select>
       </div>
       <div class="icon" class="buttons">
           <i class="fas fa-angle-double-left"></i>
           <i class="fas fa-angle-double-right"></i>
-          
       </div>
         <div id="country" class="buttons">
           <select class="custom-select">
-            <option selected="true" disabled="disabled">Choose a country</option>
-            <option value="ca">canada</option>
-            <option value="us">usa</option>
-            <option value="gb">united kingdom</option>
-            <option value="au">australia</option>
-            <option value="br">brazil</option>
-            <option value="de">germany</option>
+            <option selected="true" disabled="disabled">Country</option>
+            <option value="ca">Canada</option>
+            <option value="us">USA</option>
+            <option value="gb">United Kingdom</option>
+            <option value="au">Australia</option>
+            <option value="br">Brazil</option>
+            <option value="de">Germany</option>
             <option value="jp">Japan</option>
           </select>
           </select>
@@ -69,8 +68,6 @@
         <input class="results-button btn-grad" type="submit" value="View Results"></input>
         <a href="#" id="scroll" style="display: none;"><span></span></a>
         <div id="results">
-
-            
         </div>
      </main>
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
