changing colors and styling cards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Meta descrition for SEO -->
-        <meta name ="description" content="Matching images game">
+        <meta name ="description" content="View the latest news and breaking news today the world, weather, entertainment, politics and health.">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b8ce70bdd1.js"></script>
         <link rel="stylesheet" href="css/style.css">
@@ -23,17 +23,11 @@
             <h1 class="header__heading"> Get the latest news in <span class="typed"></span></h1>
             <a  href="#" class="btn btn--white btn--animated">category</a>
              <div class="ticker-wrap">
-                <!-- <div class="ticker">
-                      <div class="ticker__item">Letterpress chambray brunch.</div>
-                      <div class="ticker__item">Vice mlkshk crucifix beard chillwave meditation hoodie asymmetrical Helvetica.</div>
-                      <div class="ticker__item">Ugh PBR&B kale chips Echo Park.</div>
-                      <div class="ticker__item">Gluten-free mumblecore chambray mixtape food truck.</div>
-                 </div> -->
               </div>
       </header>      
       <main>   
      <section class="section-options" id="options">
-        <h3>Choose Your Favourite News</h3>
+        <h3>What news interests you?</h3>
         <div class="selection-div">
      <div id="category" class="buttons">
           <select class="custom-select"> 
@@ -48,6 +42,7 @@
       </div>
       <div class="icon" class="buttons">
           <i class="fas fa-angle-double-left"></i>
+          <span class="fas guide">select category  &AMP; country</span>
           <i class="fas fa-angle-double-right"></i>   
       </div>
         <div id="country" class="buttons">
