new API, miscellaneous edits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                           Your browser is not supported!
                       </video>
               </div> 
-              <h1 class="header__heading"> Get the latest news in <span class="typed"></span></h1>
+              <h1 class="header__heading"> Get the latest news <span class="typed"></span></h1>
               <a  href="#" class="btn btn--white btn--animated">category</a>
               <div class="ticker-wrap">
               </div>
@@ -32,30 +32,34 @@
               <div class="selection-div">
                       <div id="category" class="buttons">
                             <select class="custom-select"> 
-                              <option selected="true" disabled="disabled">Choose Category</option>
-                              <option value="business">business</option>
-                              <option value="entertainment">entertaiment</option>
-                              <option value="health">health</option>
-                              <option value="science">science</option>
-                              <option value="sports">sports</option>
-                              <option value="technology">technology</option>
+                              <option selected="true" disabled="disabled">Category</option>
+                              <option value="business">Business</option>
+                              <option value="entertainment">Entertainment</option>
+                              <option value="general">General</option>
+                              <option value="health">Health</option>
+                              <option value="science">Science</option>
+                              <option value="sports">Sports</option>
+                              <option value="technology">Technology</option>
                             </select>
                         </div>
                         <div class="icon" class="buttons">
                             <i class="fas fa-angle-double-left"></i>
-                            <span class="fas guide">select category  &AMP; country</span>
+                            <span class="fas guide">Select Category  &AMP; Country</span>
                             <i class="fas fa-angle-double-right"></i>   
                         </div>
                         <div id="country" class="buttons">
                             <select class="custom-select">
-                              <option selected="true" disabled="disabled">Choose a country</option>
-                              <option value="ca">canada</option>
-                              <option value="us">usa</option>
-                              <option value="gb">united kingdom</option>
-                              <option value="au">australia</option>
-                              <option value="br">brazil</option>
-                              <option value="de">germany</option>
+                              <option selected="true" disabled="disabled">Country</option>
+                              <option value="au">Australia</option>
+                              <option value="br">Brazil</option>
+                              <option value="ca">Canada</option>
+                              <option value="cn">China</option>
+                              <option value="fr">France</option>
+                              <option value="de">Germany</option>
                               <option value="jp">Japan</option>
+                              <option value="ae">United Arab Emirates</option>
+                              <option value="gb">United Kingdom</option>
+                              <option value="us">United States</option>
                             </select>
                             </select>
                         </div>
