--- a/index.html
+++ b/index.html
@@ -27,42 +27,36 @@
               </div>
       </header>      
       <main>   
-          <section class="section-options" id="options">
-                  <h3>What news interests you?</h3>
+          <section class="section-options" id="options">      
+                    <h3>What news interests you?</h3> 
               <div class="selection-div">
-                      <div id="category" class="buttons">
+                    <div id="category" class="buttons">
                             <select class="custom-select"> 
-                              <option selected="true" disabled="disabled">Category</option>
-                              <option value="business">Business</option>
-                              <option value="entertainment">Entertainment</option>
-                              <option value="general">General</option>
-                              <option value="health">Health</option>
-                              <option value="science">Science</option>
-                              <option value="sports">Sports</option>
-                              <option value="technology">Technology</option>
+                              <option selected="true" disabled="disabled">Choose Category</option>
+                              <option value="business">business</option>
+                              <option value="entertainment">entertaiment</option>
+                              <option value="health">health</option>
+                              <option value="science">science</option>
+                              <option value="sports">sports</option>
+                              <option value="technology">technology</option>
                             </select>
-                        </div>
-                        <div class="icon" class="buttons">
-                            <i class="fas fa-angle-double-left"></i>
-                            <span class="fas guide">Select Category  &AMP; Country</span>
-                            <i class="fas fa-angle-double-right"></i>   
-                        </div>
-                        <div id="country" class="buttons">
+                    </div>
+                    <div class="loader">
+                      <span class="loader__inner"></span>
+                    </div>
+                     <div id="country" class="buttons">
                             <select class="custom-select">
-                              <option selected="true" disabled="disabled">Country</option>
-                              <option value="au">Australia</option>
-                              <option value="br">Brazil</option>
-                              <option value="ca">Canada</option>
-                              <option value="cn">China</option>
-                              <option value="fr">France</option>
-                              <option value="de">Germany</option>
+                              <option selected="true" disabled="disabled">Choose a country</option>
+                              <option value="ca">canada</option>
+                              <option value="us">usa</option>
+                              <option value="gb">united kingdom</option>
+                              <option value="au">australia</option>
+                              <option value="br">brazil</option>
+                              <option value="de">germany</option>
                               <option value="jp">Japan</option>
-                              <option value="ae">United Arab Emirates</option>
-                              <option value="gb">United Kingdom</option>
-                              <option value="us">United States</option>
                             </select>
                             </select>
-                        </div>
+                    </div>
               </div>
           </section>
               <input class="results-button btn-grad" type="submit" value="View Results"></input>
