--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <div id="category" class="buttons">
                             <select class="custom-select"> 
                               <option selected="true" disabled="disabled">Choose Category</option>
-                              <option value="business">business</option>
-                              <option value="entertainment">entertaiment</option>
-                              <option value="health">health</option>
-                              <option value="science">science</option>
-                              <option value="sports">sports</option>
-                              <option value="technology">technology</option>
+                              <option value="business">Business</option>
+                              <option value="entertainment">Entertainment</option>
+                              <option value="health">Health</option>
+                              <option value="science">Science</option>
+                              <option value="sports">Sports</option>
+                              <option value="technology">Technology</option>
                             </select>
                     </div>
                     <div class="loader">
@@ -46,14 +46,14 @@
                     </div>
                      <div id="country" class="buttons">
                             <select class="custom-select">
-                              <option selected="true" disabled="disabled">Choose a country</option>
-                              <option value="ca">canada</option>
-                              <option value="us">usa</option>
-                              <option value="gb">united kingdom</option>
-                              <option value="au">australia</option>
-                              <option value="br">brazil</option>
-                              <option value="de">germany</option>
+                              <option selected="true" disabled="disabled">Choose a Country</option>
+                              <option value="au">Australia</option>
+                              <option value="br">Brazil</option>
+                              <option value="ca">Canada</option>
+                              <option value="de">Germany</option>
                               <option value="jp">Japan</option>
+                              <option value="gb">United Kingdom</option>
+                              <option value="us">United States</option>
                             </select>
                             </select>
                     </div>
